--- a/public/custom.css
+++ b/public/custom.css
@@ -1,1 +1,82 @@
-custom.css
+
+.global-nav {
+  background-image: url(https://abs.twimg.com/a/1437963370/img/t1/lohp_streams_header_bg_v4.png);
+  background-size: 100% 100%;
+  border-bottom: 1px solid rgba(0,0,0,0.15);
+  height: 46px;
+  position: relative;
+  width: 100%;
+}
+
+#submit {
+  background-color: #23b8e5;
+  border-style: none;
+}
+
+.container {
+  margin-top: 10%;
+}
+
+h3 {
+  font-family: 'lato-light';
+}
+body {
+  font-size: 12px;
+}
+
+#email, #name, #username, #password {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border-radius: 3px;
+  height: 40px;
+}
+
+#dropdownMenu1 {
+  background: transparent;
+  border-style: none;
+  color: white;
+  font-size: 12px;
+    margin-top: 3%;
+}
+
+.username, .password {
+  font-size: 12px;
+  font-family: 'lato';
+}
+
+.footer-links {
+  font-size: 10px;
+  font-family: 'lato';
+}
+
+.dropdown-wrapper {
+  margin-left: 15px;
+  margin-top: 15px;
+}
+
+.down-button {
+  background-color: #23b8e5;
+  color: white;
+  margin-top: 10px;
+  margin-right: 30px;
+  margin-bottom: 10px;
+}
+ 
+.remember {
+  font-size: 10px;
+}
+
+.js-username-field{
+  margin-left: 10px;
+}
+
+.js-password-field {
+  margin-left: 12px;
+}
+
+img {
+  position: absolute;
+  margin-left: 48%;
+  margin-top: 8px;
+
+}
